# fuzz-demo

./: Makefile  README.md  fuzzer.py
pnm/: Cargo.toml
pnm/src/: main.rs
programs/png/: Cargo.toml  instrument.sh
programs/zenoh/: FUZZ_README.md
programs/zenoh/zenoh/: instrument.sh
programs/zenoh/zenoh/examples/zenoh/: z_delete.rs
verifier/: Makefile  verifier  verifier.c
