[package]
name = "programs"
version = "0.1.0"
authors = ["Tai Duy Nguyen <duytai.cse@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "png"
path = "bin/png.rs"

[[bin]]
name = "webp"
path = "bin/webp.rs"

[dependencies]
image = "0.23.12"
